--- a/depot/test/fixtures/products.yml
+++ b/depot/test/fixtures/products.yml
@@ -3,11 +3,17 @@
 one:
   title: MyString
   description: MyText
-  image_url: MyString
+  image_url: ruby.jpg
   price: 9.99
 
 two:
   title: MyString
   description: MyText
-  image_url: MyString
+  image_url: ruby.jpg
   price: 9.99
+
+ruby:
+  title: Programming Ruby
+  description: many things to say in this description. I dont even know where to start. Can you please help me think of more things to write in this thing.
+  price: 23.24
+  image_url: ruby.jpg
